to discuss with mentor

--- a/Irina-Frequentist Inference Case Study - Part A.ipynb
+++ b/Irina-Frequentist Inference Case Study - Part A.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,9 +98,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__ pdf(x, loc=0, scale=1)\n",
-    "\n",
-    "Probability density function."
+    "__A:__ Probability density function: pdf(x, loc=0, scale=1)\n",
+    "\n"
    ]
   },
   {
@@ -111,15 +110,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__A:__"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,12 +131,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A:__ The mean of the sample is .1936"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +145,7 @@
        "0.19355593334131074"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,12 +166,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A:__ The standard deviation of the sample is .961\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +180,7 @@
        "0.9606195639478641"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,12 +206,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A:__ The best estimate for the population standard deviation based on the sample of 5 observations drawn from a normal distributin is 1.074 using the Bessel's correction\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +220,7 @@
        "1.0740053227518152"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,12 +240,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__ np.std return the standard deviation with the squared sum of residuals divided by n, not n-1, even though the sample size was small"
+    "__A:__ np.std returns the sample standard deviation with the squared sum of residuals divided by n, not n-1, even though the sample size was small"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +254,7 @@
        "0.9606195639478641"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +288,7 @@
        "1.0740053227518152"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +497,7 @@
        "173.47911444163503"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -541,13 +533,20 @@
        "173.7317666636263"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.mean(daily_sample2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The two random samples of 10 (above) from a population with the true mean 172 produced two sample means of 173.5 and 173.7"
    ]
   },
   {
@@ -566,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -622,27 +621,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__ Looks like the sample standard deviation of 1.575 is very close to the population standard deviation of 1.58. In other words, it's a very good estimate."
+    "__A:__ According to the CLT, as sample size increases, the sampling distribution of the mean will be normally distributed centered around the population mean. In our 365 repeated sampling procedures the sampling mean is 171.87, while the population mean is 172, so the sampling mean is close to the population mean, but because the sample size is still very small (only 10) the sampling mean is not normally distributed as evident from the histogram. We will need larger sample size to see the CLT in action."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1.5756704135286475"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Population mean and standard deviation:\n",
+      "172.0192602425845 4.990839139566387\n",
+      "Sampling mean and corrected sampling standard deviation\n",
+      "171.8660049358649 1.5778333114768472\n",
+      "The population standard deviation estimator\n",
+      "1.5756704135286475 1.5782419116544761\n"
+     ]
     }
    ],
    "source": [
-    "np.std(daily_means)"
+    "#look at the population statistics:\n",
+    "print(\"Population mean and standard deviation:\")\n",
+    "print(np.mean(pop_heights), np.std(pop_heights))\n",
+    "print(\"Sampling mean and corrected sampling standard deviation\")\n",
+    "print(np.mean(daily_means),  np.std(daily_means,ddof=1))\n",
+    "print(\"The population standard deviation estimator\")\n",
+    "print(np.std(daily_means), np.std(pop_heights)/np.sqrt(10))"
    ]
   },
   {
@@ -660,22 +667,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__A:__ If the sample size is larger, I'd expect more narrow distrubtion of the sample mean, as it would center more around the population mean."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "171.94366080916114 0.6736107539771146\n"
+      "Population mean and standard deviation:\n",
+      "172.0192602425845 4.990839139566387\n",
+      "Sampling mean and corrected sampling standard deviation:\n",
+      "171.8660049358649 0.6745354088447525\n"
      ]
     }
    ],
@@ -688,9 +691,17 @@
     "for i in range(365):\n",
     "       daily_means_large[i]=np.mean(townsfolk_sampler(50))\n",
     " \n",
-    "\n",
-    "\n",
-    "print(np.mean(daily_means_large),np.std(daily_means_large))"
+    "print(\"Population mean and standard deviation:\")\n",
+    "print(np.mean(pop_heights), np.std(pop_heights))\n",
+    "print(\"Sampling mean and corrected sampling standard deviation:\")\n",
+    "print(np.mean(daily_means),np.std(daily_means_large,ddof=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__A:__ If the sample size is larger, I'd expect more narrow distrubtion of the sample mean, as it would center more around the population mean. As thhe"
    ]
   },
   {
@@ -760,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +780,7 @@
        "0.8413447460685429"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,19 +806,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n"
+      "0.8408546025640735\n"
      ]
     }
    ],
    "source": [
-    "print(norm.cdf(177))"
+    "print(norm.cdf(177,np.mean(pop_heights),np.std(pop_heights)))"
    ]
   },
   {
@@ -821,27 +832,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__ The probability of observing a height of 2m is close to zero. 99 percent of a normally distributed population will be within 3 standard deviations. One std gives us 177cm, two std give us 182, and three std give us 187cm. Observing a height of 2m would be less than 1/2 percent."
+    "__A:__ The opposite view on the probablity, i.e. probability of observing a height as extreme as 177cm is 1-p(height<177)=.16, probablity of observing a height of 2m is 1-p(p<200)=0.00000001"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(177.01009938215088, 182.00093852171727, 186.99177766128366)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0327726340797483e-08\n"
+     ]
     }
    ],
    "source": [
-    "np.mean(pop_heights)+np.std(pop_heights),np.mean(pop_heights)+2*np.std(pop_heights),np.mean(pop_heights)+3*np.std(pop_heights)"
+    "print(1-norm.cdf(200,np.mean(pop_heights),np.std(pop_heights)))"
    ]
   },
   {
@@ -886,89 +894,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 85,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "172.7815108576788 4.195424364433547\n"
+      "Estimated population average height: 172.7815108576788 Estimated population standard deviation: 4.195424364433547\n",
+      "z-score for 95 percent CI 1.959963984540054\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "179.6823698401179"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "seed(47)\n",
-    "# take your sample now\n",
-    "daily_means=np.empty(365)\n",
-    "seed(47)\n",
+    "\n",
     "# take your samples here\n",
     "sample=townsfolk_sampler(50)\n",
-    "# print the population mean and standard deviation\n",
-    "print(np.mean(sample), np.std(sample,ddof=1))\n",
-    "# print 95 percent margin of error\n",
-    "norm.ppf(0.95, loc=np.mean(sample), scale=np.std(sample,ddof=1))\n",
-    "# print the 95 percent confidence interval of the mean\n"
+    "\n",
+    "# print the sample mean and standard deviation\n",
+    "print(\"Estimated population average height:\", np.mean(sample), \"Estimated population standard deviation:\", np.std(sample,ddof=1))\n",
+    "\n",
+    "\n",
+    "# calculate standard error (the standard deviation of the sampling mean distribution)\n",
+    "sample_se=np.std(sample,ddof=1)/np.sqrt(50)\n",
+    "\n",
+    "# calculate z-score for two sided confidence interval of 95 percent\n",
+    "z_score=norm.ppf(.975)\n",
+    "print(\"z-score for 95 percent CI\", z_score)\n",
+    "\n",
+    "# margin of error\n",
+    "margin_error=sample_se*z_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "179.6823698401179"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "interval_value =norm.ppf(0.95, loc=np.mean(sample), scale=np.std(sample,ddof=1))\n",
-    "interval_value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lower_95 = np.mean(sample) - interval_value\n",
-    "upper_95 = np.mean(sample) + interval_value"
+    "# calculate the upper and lower bound of the 95 percent confidence interval:\n",
+    "lower_95 = np.mean(sample) - margin_error\n",
+    "upper_95 = np.mean(sample) + margin_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-6.900858982439104 352.4638806977967\n"
+      "171.61861992339115 173.94440179196644\n"
      ]
     }
    ],
@@ -1006,24 +987,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.009575234489209\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats \n",
+    "t=scipy.stats.t.ppf(1-0.025, 49)\n",
+    "print(t)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "171.589184447403 173.9738372679546\n"
+     ]
+    }
+   ],
+   "source": [
+    "# margin of error\n",
+    "margin_error_t=sample_se*t\n",
+    "lower_95_t = np.mean(sample) - margin_error_t\n",
+    "upper_95_t = np.mean(sample) + margin_error_t\n",
+    "\n",
+    "print(lower_95_t, upper_95_t)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "The 95 percent confidence interval using the t distribution is slightly wider than using normal distribution."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1053,7 +1063,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
