corrected T-stat calc from using std to variance

--- a/Irina-Frequentist Inference Case Study - Part B.ipynb
+++ b/Irina-Frequentist Inference Case Study - Part B.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "(1338, 8)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "4   32    1  28.880         0       0       1   3866.85520               1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "1               16423.928277  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -513,12 +513,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "109.52089095643237\n"
+      "11823.846097238458\n"
      ]
     }
    ],
    "source": [
-    "pooled_std_numerator=(len(insured_charges)-1)*insured_charges.std()+(len(insured_charges)-1)*uninsured_charges.std()\n",
+    "pooled_std_numerator=(len(insured_charges)-1)*insured_charges.var()+(len(insured_charges)-1)*uninsured_charges.var()\n",
     "pooled_std_denominator=len(insured_charges)+len(uninsured_charges)-2\n",
     "pooled_std=np.sqrt(pooled_std_numerator/pooled_std_denominator)\n",
     "\n",
@@ -527,14 +527,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.077117763507148\n"
+      "656.0840084754836\n"
      ]
     }
    ],
@@ -545,14 +545,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1251.005275870104\n"
+      "11.58770262042663\n"
      ]
     }
    ],
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -573,13 +573,13 @@
        "Ttest_indResult(statistic=11.893299030876712, pvalue=4.461230231620717e-31)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scipy.stats.ttest_ind(insured_charges, uninsured_charges, axis=0, equal_var=True)\n"
+    "scipy.stats.ttest_ind(insured_charges, uninsured_charges, axis=0)\n"
    ]
   },
   {
